Now Able to Edit Players
db was redesigned.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "socket.io": "^1.7.3",
     "vue-color": "^2.0.7",
     "vue-loading-spinner": "^1.0.7",
-    "vue-multiselect": "^1.1.4"
+    "vue-multiselect": "^1.1.4",
+    "vue-spinner": "^1.0.2"
   }
 }
